--- a/src/views/admin/registerProduct.ejs
+++ b/src/views/admin/registerProduct.ejs
@@ -69,7 +69,7 @@
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
-                        <form>
+                        <form action="/admin">
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="name">Nombre</label>
