--- a/src/views/admin/editProduct.ejs
+++ b/src/views/admin/editProduct.ejs
@@ -69,6 +69,14 @@
                             <h3 class="card-title">Editar el Producto XXXX</h3>
                         </div>
                         <!-- /.card-header -->
+                          <!-- activo mensaje si hace post -->
+                        <% if(datos.msg!=""){ %>
+                          <div class="alert alert-success alert-dismissible">
+                              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                              <h5><i class="icon fas fa-check"></i> Gracias por su consulta!</h5>
+                              <%= datos.msg %>
+                            </div>
+                      <% } %>
                         <!-- form start -->
                         <form action="/admin/edit" method="post" id="form-editar">
                             <div class="card-body">
