--- a/src/views/admin/editProduct.ejs
+++ b/src/views/admin/editProduct.ejs
@@ -73,7 +73,7 @@
                         <% if(datos.msg!=""){ %>
                           <div class="alert alert-success alert-dismissible">
                               <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                              <h5><i class="icon fas fa-check"></i> Gracias por su consulta!</h5>
+                              <h5><i class="icon fas fa-check"></i> Editar Producto Existente!</h5>
                               <%= datos.msg %>
                             </div>
                       <% } %>
