--- a/src/views/admin/registerProduct.ejs
+++ b/src/views/admin/registerProduct.ejs
@@ -24,7 +24,7 @@
           <nav class="header-nav">
             <ul class="nav-bar">
               <li><a href="/">Inicio</a></li>
-              <li><a href="#">Productos</a></li>
+             <!-- <li><a href="#">Productos</a></li> -->
               <li><a href="/contact">Contacto</a></li>
             </ul>
             <ul class="nav-bar">
