--- a/src/views/admin/registerProduct.ejs
+++ b/src/views/admin/registerProduct.ejs
@@ -77,7 +77,7 @@
                             </div>
                       <% } %>
                         <!-- form start -->
-                        <form action="/admin">
+                        <form action="/admin/register" method="post">
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="name">Nombre</label>
