--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -89,7 +89,7 @@
             <p class="product__cathegory">
               <%= product.category %>
             </p>
-            <a href="/products/<%= product.productId %>">
+            <a class="product__link" href="/products/<%= product.productId %>">
               <h3 class="product__name">
                 <%= product.name %>
               </h3>
