--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -65,47 +65,66 @@
             <h3>Registro de usuario</h3>
             <hr>
             <div class="content col-2">
-              <form action="/users/create" id="Register" method="post" class="login">
+              <div class="row_titulo">
+                <h4>Datos de Acceso</h4>
+              </div>
+              <form action="/users/create" id="formRegister" method="post" class="formRegister">
                 <div class="form-group">
-                  <input class="form-input datos" type="email" id="email" name="email" required="" placeholder="Email">
+                  <input class="form-input datos" type="email" id="email" name="email" required placeholder="Email" value="<%= locals.old && old.email %>">
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.email %></p>
+                  <% } %>
                 </div>
+               
                 <div class="form-group">
-                  <input class="form-input datos" type="password" id="password" name="password" required=""
-                    placeholder="Contraseña">
+                  <input class="form-input datos" type="password" id="password" name="password" required placeholder="Contraseña" value="<%= locals.old && old.password %>">
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.password %></p>
+                  <% } %>
                 </div>
+                
                 <div class="form-group ">
-                  <input class="form-input datos" type="password" id="password2" name="password2" required=""
-                    placeholder="Confirmar contraseña">
+                  <input class="form-input datos" type="password" id="password2" name="password2" required placeholder="Confirmar contraseña" value="<%= locals.old && old.password2 %>">
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.password2 %></p>
+                  <% } %>
                 </div>
-              </form>
+                
 
               <div class="row_titulo">
-                <h4 class="">Información personal</>
+                <h4>Información personal</h4>
               </div>
-              <form>
+             
                 <div class="form-group">
-                  <input class="form-input datos" type="text" id="nombre" name="nombre" required=""
-                    placeholder="Nombre">
+                  <input class="form-input datos" type="text" id="nombre" name="nombre" required placeholder="Nombre" value="<%= locals.old && old.nombre %>">
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.nombre %></p>
+                  <% } %>
                 </div>
                 <div class="form-group">
-                  <input class="form-input datos" type="text" id="apellido" name="apellido" required=""
-                    placeholder="Apellido">
+                  <input class="form-input datos" type="text" id="apellido" name="apellido" required placeholder="Apellido" <%= locals.old && old.apellido %>>
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.apellido %></p>
+                  <% } %>
                 </div>
                 <div class="form-group">
-                  <input class="form-input datos" type="number" id="dni" name="dni" required=""
-                    placeholder="Número de DNI o CUIT">
+                  <input class="form-input datos" type="text" id="dni" name="dni" required placeholder="Número de DNI" value="<%= locals.old && old.dni %>">
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.dni %></p>
+                  <% } %>
                 </div>
                 <div class="form-group">
-                  <input class="form-input datos" type="number" id="tel" name="tel" required=""
-                    placeholder="Número de teléfono">
+                  <input class="form-input datos" type="text" id="tel" name="tel" required placeholder="Número de teléfono" <%= locals.old && old.tel %>>
+                  <% if(locals.errors && errors.email){ %>
+                    <p class="feedback"><%= errors.telefono %></p>
+                  <% } %>
                 </div>
                 <input type="hidden" id="express" name="express" value="0">
 
             </div>
             <div class="cta">
               <div>
-                <div id="loader" class="loader" style="display:none"></div>
-                <input type="submit" id="myBtn" name="myBtn" class="btn btn-accent">
+                  <input type="submit" id="myBtn" name="myBtn" class="btn btn-accent" value="Registrarme">
               </div>
             </div>
 
@@ -134,7 +153,7 @@
 
     <%- include('../partials/footer',{'pie':datos.pie}) %>
 
-      <%- include('../partials/script') %>
+    <%- include('../partials/script') %>
   </body>
 
 </html>
