--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <%- include('./partials/head',{'titulo':datos.titulo}) %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -69,7 +69,7 @@
                         </div>
                         <!-- /.card-header -->
                         <!-- activo mensaje si hace post -->
-                        <% if(datos.msg!=""){ %>
+                        <% if(datos.msg){ %>
                             <div class="alert alert-success alert-dismissible">
                                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
                                 <h5><i class="icon fas fa-check"></i> Gracias por su consulta!</h5>
@@ -94,7 +94,7 @@
                                 <hr>
                                 <div class="form-group">
                                     <label for="email">Departamento</label>
-                                    <select class="form-control" name="cateogria">
+                                    <select class="form-control" name="departamento">
                                         <option>Venta</option>
                                         <option>Reparación</option>
                                         <option>Consulta 1 - a determinar</option>
@@ -104,7 +104,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="email">Ingrese su consulta</label>
-                                    <textarea class="form-control" cols="10" rows="5"></textarea>
+                                    <textarea name="observacion" class="form-control" cols="10" rows="5"></textarea>
                                 </div>
                             </div>
                             <!-- /.card-body -->
