cambios y otras pruebas en datasource

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -6,8 +6,9 @@
 
 </head>
 <body>
+  <div id="loader"></div>
     <header>
-        <div class="contenedor-header">
+        <div class="contenedor-header" >
           <div id="logo" class="logo-header img-header">
             <img id="logo1" src="/images/PowerCore.svg" alt="PowerCore">
             <img id="logo2" src="/images/PowerCore_large.svg" alt="PowerCore">
