--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -59,16 +59,25 @@
 
       <div class="account">
         <div class="item">
-
+          <!-- activo mensaje si hace post -->
+          <% if(datos.msg){ %>
+            <div class="alert alert-success alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h5><i class="icon fas fa-check"></i> Gracias por su registro!</h5>
+                <%= datos.msg %>
+              </div>
+          <% } %>
 
           <div class="item-login item-register">
             <h3>Registro de usuario</h3>
             <hr>
             <div class="content col-2">
+              
               <div class="row_titulo">
                 <h4>Datos de Acceso</h4>
               </div>
-              <form action="/users/create" id="formRegister" method="post" class="formRegister">
+              
+              <form action="/users/register" id="formRegister" method="post" class="formRegister">
                 <div class="form-group">
                   <input class="form-input datos" type="email" id="email" name="email" required placeholder="Email" value="<%= locals.old && old.email %>">
                   <% if(locals.errors && errors.email){ %>
@@ -114,7 +123,7 @@
                   <% } %>
                 </div>
                 <div class="form-group">
-                  <input class="form-input datos" type="text" id="tel" name="tel" required placeholder="Número de teléfono" <%= locals.old && old.tel %>>
+                  <input class="form-input datos" type="text" id="telefono" name="telefono" required placeholder="Número de teléfono" <%= locals.old && old.tel %>>
                   <% if(locals.errors && errors.email){ %>
                     <p class="feedback"><%= errors.telefono %></p>
                   <% } %>
@@ -124,7 +133,7 @@
             </div>
             <div class="cta">
               <div>
-                  <input type="submit" id="myBtn" name="myBtn" class="btn btn-accent" value="Registrarme">
+                  <input type="submit" id="myBtn" name="myBtn" class="btn btn-primary" value="Registrarme">
               </div>
             </div>
 
