--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -3,69 +3,17 @@
 <%- include('../partials/head',{'titulo':datos.titulo}) %>
 
   <body>
-    <header>
-      <div class="contenedor-header">
-        <div id="logo" class="logo-header img-header">
-          <img id="logo1" src="/images/PowerCore.svg" alt="PowerCore">
-          <img id="logo2" src="/images/PowerCore_large.svg" alt="PowerCore">
-        </div>
-        <div id="search" class="form-search">
-          <form class="header-form" action="#" method="GET">
-            <input placeholder="Buscar productos, marcas y más" type="text">
-            <a href="#"><i class="fa fa-search"></i></a>
-          </form>
-        </div>
-      </div>
-      <div class="contenedor-nav">
-
-        <nav class="header-nav">
-          <ul class="nav-bar">
-            <li><a href="/">Inicio</a></li>
-            <!-- <li><a href="#">Productos</a></li> -->
-            <li><a href="/contact">Contacto</a></li>
-          </ul>
-          <ul class="nav-bar">
-            <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
-            <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-            <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
-          </ul>
-        </nav>
-      </div>
-      <div class="mob__navbar">
-        <div class="nav-item home">
-          <a href="/">
-            <img class="img-nav" src="/images/PowerCore.svg" alt="">
-          </a>
-        </div>
-        <div class="nav-item">
-          <button class="search__mobile">
-            <i class="fa-solid fa-magnifying-glass"></i>
-
-          </button>
-        </div>
-        <div class="nav-item">
-          <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
-            <br>
-            Carrito</a>
-        </div>
-        <div class="nav-item">
-          <i class="fa-solid fa-bars"></i>
-          Menu
-        </div>
-      </div>
-      </div>
-    </header>
+    <%- include('../partials/headers',{'titulo':datos.titulo}) %>
     <main>
 
       <div class="account">
         <div class="item">
           <!-- activo mensaje si hace post -->
           <% if(datos.msg){ %>
-            <div class="alert alert-success alert-dismissible">
-                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                <h5><i class="icon fas fa-check"></i> Gracias por su registro!</h5>
-                <%= datos.msg %>
-              </div>
+            <div class="alert alert-success" role="alert">
+              <h5><i class="icon fas fa-check"></i> Gracias por su Registro!</h5>
+                  <%= datos.msg %>
+            </div>
           <% } %>
 
           <div class="item-login item-register">
