circuito de login en paginas, y muestro usuario en la barra

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,7 +3,7 @@
 <%- include('./partials/head',{'titulo':datos.titulo}) %>
 
 <body>
-  <%- include('./partials/headers',{'titulo':datos.titulo}) %>
+  <%- include('./partials/headers',{ infoUsuario: infoUsuario }) %>
   <main>
     <section id="products__section">
       <div id="hero-carousel banner-height" class="carousel slide " data-bs-ride="carousel">
