--- a/src/views/admin/editProduct.ejs
+++ b/src/views/admin/editProduct.ejs
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-  <%- include('../partials/headers',{'titulo':datos.titulo}) %>
+    <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
     <section class="content">
         <div class="container-fluid">
             <div class="row" style="display: flex; justify-content: center;">
