--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div id="loader"></div>
-    <%- include('./partials/headers',{'titulo':datos.titulo}) %>
+  <%- include('./partials/headers',{ infoUsuario: infoUsuario }) %>
     <section class="content">
         <div class="container-fluid">
             <div class="row" style="display: flex; justify-content: center;">
