--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -4,7 +4,7 @@
 <%- include('../partials/head',{'titulo':datos.titulo}) %>
 
 <body>
-  <%- include('../partials/headers',{'titulo':datos.titulo}) %>
+  <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
   <main>
     <div class="cont air-v">
       <div class="breadcrumb">
