--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -4,7 +4,7 @@
 <%- include('../partials/head',{'titulo':datos.titulo}) %>
 
 <body>
-  <%- include('../partials/headers',{'titulo':datos.titulo}) %>
+    <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
   <main class="cont air-v">
     <div class="breadcrumb">
         <a href="/" itemprop="itemListElement" typeof="ListItem">
