--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -3,7 +3,7 @@
 <%- include('../partials/head',{'titulo':datos.titulo}) %>
 
   <body>
-    <%- include('../partials/headers',{'titulo':datos.titulo}) %>
+    <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
     <main>
 
       <div class="account">
