--- a/src/views/admin/registerProduct.ejs
+++ b/src/views/admin/registerProduct.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <%- include('../partials/head',{'titulo':datos.titulo}) %>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+   
 
 </head>
 <body>
@@ -20,50 +20,48 @@
                         <!-- /.card-header -->
                            <!-- activo mensaje si hace post -->
                         <% if(datos.msg!=""){ %>
-                          <div class="alert alert-success alert-dismissible">
-                              <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-                              <h5><i class="icon fas fa-check"></i> Crear Producto Nuevo</h5>
-                              <%= datos.msg %>
-                            </div>
+                            <div class="alert alert-success" role="alert">
+                                <h5><i class="icon fas fa-check"></i> Crear producto Nuevo!</h5>
+                                    <%= datos.msg %>
+                              </div>
                       <% } %>
                         <!-- form start -->
-                        <form action="/admin/register" method="post">
+                        <form action="/admin/register" method="post" id="form-editar" enctype="multipart/form-data">
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="name">Nombre</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" value="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Descripción</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <label for="description">Descripción</label>
+                                    <input type="text" class="form-control" id="description" name="description" placeholder="Enter description" value="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Precio</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <label for="productCode">Código del Producto</label>
+                                    <input type="text" class="form-control" id="productCode" name="productCode" placeholder="Enter productCode" value="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Código del Producto</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <label for="image">Imagen</label>
+                                    <img src="" width="150px" alt="Sin Imagen">
+                                    <input type="file" class="form-control" id="image" name="image" placeholder="Enter image" value="">
+                                    
+
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Imagen</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <label for="price">Precio General</label>
+                                    <input type="text" class="form-control" id="price" name="price" placeholder="Enter price" value="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Precio General</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <label for="cashPrice">Precio  de Contado</label>
+                                    <input type="text" class="form-control" id="cashPrice" name="cashPrice" placeholder="Enter cashPrice" value="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Precio  de Contado</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                    <label for="mercadoPagoPrice">Precio de MercadoPago</label>
+                                    <input type="text" class="form-control" id="mercadoPagoPrice" name="mercadoPagoPrice" placeholder="Enter mercadoPagoPrice" value="">
                                 </div>
                                 <div class="form-group">
-                                    <label for="name">Precio de MercadoPago</label>
-                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
-                                </div>
-                                <div class="form-group">
-                                    <select class="form-control" name="cateogria">
-                                        <option>Laptops</option>
+                                    <select class="form-control" name="category">
+                                        <option selected="selected">Laptops</option>
                                         <option>Accessories</option>
                                         <option>Desktops</option>
                                         <option>Gamers</option>
@@ -73,7 +71,7 @@
                             </div>
                             <!-- /.card-body -->
                             <div class="card-footer">
-                                <button type="submit" class="btn btn-primary">Crear Producto</button>
+                                <button type="submit" class="btn btn-success">Crear Nuevo Producto</button>
                             </div>
                         </form>
                     </div>
