--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -26,6 +26,10 @@
       <div class="card__wrapper">
         <% for(let product of products){ %>
         <div class="product__card">
+          <!-- aqui para editar, podemos cambiarlo de lugar-->
+          <% if (infoUsuario!="No hay Datos") { %>
+            <a href="/admin/edit/<%= product.productId %>"><i class="fas fa-edit"></i></a>
+          <% } %>
           <a href="/products/<%= product.productId %>"><img src="<%= product.image %>" alt="Producto 1"></a>
           <div class="product__description">
             <p class="product__cathegory">
