--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -5,7 +5,7 @@
 
 <body>
     <%- include('../partials/headers',{ infoUsuario: infoUsuario }) %>
-  <main class="cont air-v">
+  <!---<main class="cont air-v">
     <div class="breadcrumb">
         <a href="/" itemprop="itemListElement" typeof="ListItem">
             <span itemprop="item">
@@ -40,7 +40,7 @@
                 <div class="item">
                     <img src="/images/products/placeholder.png" alt="Aqui detalles de otros productos">
                 </div>
-                <!-- Additional images gallery -->
+                <!-- Additional images gallery --
             </div>
             <div class="info-img">
                 * LAS IMÁGENES SON AL EFECTO MERAMENTE ILUSTRATIVO, SON PLACEHOLDER
@@ -127,14 +127,127 @@
                         </div>
                     </a>
                 </div>
-                <!-- Additional related products -->
+                <!-- Additional related products --
             </div>
         </div>
 
       <div class="prod-code">Código del producto: PCA003</div>
     </div>
-</main>
+</main> --->
 
+<main class="main-container">
+    <!--<header class="header">
+      <!--<div class="header__navigation">
+        <img class="header__menu" src="./images/icon-menu.svg" alt="menu icon">
+        <img class="header__logo" src="./images/logo.svg" alt="logo">
+
+        <nav class="navbar">
+          <ul class="navbar__items">
+            <li><a class="navbar__link" href="#">Collections</a></li>
+            <li><a class="navbar__link" href="#">Men</a></li>
+            <li><a class="navbar__link" href="#">Women</a></li>
+            <li><a class="navbar__link" href="#">About</a></li>
+            <li><a class="navbar__link" href="#">Contact</a></li>
+          </ul>
+        </nav>
+
+
+      </div> -->
+
+      <!-- inicio modal navbar --
+      <div class="modal-navbar__background">
+        <nav class="modal-navbar">
+          <img class="modal-navbar__close-icon" src="./images/icon-close.svg" alt="" srcset="">
+          <ul class="modal-navbar__items">
+            <li><a class="modal-navbar__link" href="#">Collections</a></li>
+            <li><a class="modal-navbar__link" href="#">Men</a></li>
+            <li><a class="modal-navbar__link" href="#">Women</a></li>
+            <li><a class="modal-navbar__link" href="#">About</a></li>
+            <li><a class="modal-navbar__link" href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
+      <!-- final modal navbar --
+
+      <div class="header__cart-avatar">
+        <div class="header__cart">
+          <div class="header__cart--notification">0</div>
+          <img src="./images/icon-cart.svg" alt="">
+        </div>
+        <img class="header__avatar" src="./images/image-avatar.png" alt="">
+      </div>--
+    </header>-->
+
+    <section class="content">
+      <article class="gallery">
+        <div class="gallery__image-container">
+          <img class="gallery__previus" src="/public/images/icon-previous.svg" alt="previus">
+          <img class="gallery__next" src="/public/images/icon-next.svg" alt="next">
+        </div>
+        <div class="gallery__thumnails">
+          <img id="1" class="gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>">
+          <img id="2" class="gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>" >
+          <img id="3" class="gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>" >
+          <img id="4" class="gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>" >
+        </div>
+      </article>
+
+      <article class="details">
+        <h2 class="details__company"> <%= product.category %></h2>
+        <h2 class="details__title"> <%= product.name %></h2>
+        <p class="details__description">These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+        <div class="details__prices">
+          <p class="details__now">$<%= product.price %></p>
+        </div>
+        <div class="details__product-quantity">
+          <div class="input">
+            <img class="input__minus" src="/public/images/icon-minus.svg" alt="minus">
+            <input class="input__number" type="text" value="0">
+            <img class="input__plus" src="/public/images/icon-plus.svg" alt="plus">
+          </div>
+          <button class="btn btn-primary"> <img src="/public/images/icon-cart-white.svg" alt=""> Add to cart</button>
+        </div>
+      </article>
+    </section>
+
+    <!-- inicio cart modal -->
+    <div class="cart-modal">
+      <p class="cart-modal__title">Cart</p>
+      <div class="cart-modal__chekout-container">
+        <div class="cart-modal__details-container">
+          <img class="cart-modal__image" src="/public/images/<%= product.productId %>" alt="">
+          <div>
+            <p class="cart-modal__product">Autumn Limited Edition...</p>
+            <p class="cart-modal__price">$125 x3 <span>$375.00</span> </p>
+          </div>
+          <img class="cart-modal__delete" src="/public/images/icon-delete.svg" alt="delete">
+        </div>
+        <button class="cart-modal__chekount" >Checkout</button>
+      </div>
+    </div>
+    <!-- fin cart modal -->
+
+    
+  </main>
+  <!-- inicio gallery modal -->
+  <div class="modal-gallery__background">
+    <article class="modal-gallery">
+      <div class="modal-gallery__close-container">
+        <img class="modal-gallery__close" src="/public/images/icon-close.svg" alt="icon close">
+      </div>
+      <div class="modal-gallery__image-container">
+        <img class="modal-gallery__previus" src="/public/images/icon-previous.svg" alt="previus">
+        <img class="modal-gallery__next" src="/public/images/icon-next.svg" alt="next">
+      </div>
+      <div class="modal-gallery__thumnails">
+        <img id="m1" class="modal-gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>">
+        <img id="m2" class="modal-gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>">
+        <img id="m3" class="modal-gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>">
+        <img id="m4" class="modal-gallery__thumnail" src="<%= product.image %>" alt="thumnail" href="/products/<%= product.productId %>">
+      </div>
+    </article>
+  </div>
+  <!-- fin gallery modal -->
 <%- include('../partials/footer',{'pie':datos.pie}) %>
 
 <%- include('../partials/script') %>
