--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -181,8 +181,8 @@
     <section class="content">
       <article class="gallery">
         <div class="gallery__image-container">
-          <img class="gallery__previus" src="/public/images/icon-previous.svg" alt="previus">
-          <img class="gallery__next" src="/public/images/icon-next.svg" alt="next">
+          <img class="gallery__previus" src="/images/icon-previous.svg" alt="previus">
+          <img class="gallery__next" src="/images/icon-next.svg" alt="next">
         </div>
         <div class="gallery__thumnails">
           <% if (product.images) { %>
@@ -203,11 +203,11 @@
         </div>
         <div class="details__product-quantity">
           <div class="input">
-            <img class="input__minus" src="/public/images/icon-minus.svg" alt="minus">
+            <img class="input__minus" src="/images/icon-minus.svg" alt="minus">
             <input class="input__number" type="text" value="0">
-            <img class="input__plus" src="/public/images/icon-plus.svg" alt="plus">
+            <img class="input__plus" src="/images/icon-plus.svg" alt="plus">
           </div>
-          <button class="btn btn-primary"> <img src="/public/images/icon-cart-white.svg" alt=""> Add to cart</button>
+          <button class="btn btn-primary"> <img src="/images/icon-cart-white.svg" alt=""> Add to cart</button>
         </div>
       </article>
     </section>
